Added HAVE_GIFLIB macro for optional dependency on giflib

--- a/Makefile.netbsd
+++ b/Makefile.netbsd
@@ -1,4 +1,4 @@
 .include "Makefile"
 
-CFLAGS = -Wall -pedantic -DVERSION=\"$(VERSION)\" -I/usr/X11R7/include -I/usr/pkg/include
+CFLAGS = -Wall -pedantic -O2 -DVERSION=\"$(VERSION)\" -DHAVE_GIFLIB -I/usr/X11R7/include -I/usr/pkg/include
 LDFLAGS = -L/usr/X11R7/lib -Wl,-R/usr/X11R7/lib -L/usr/pkg/lib -Wl,-R/usr/pkg/lib
