--- a/sxiv.desktop
+++ b/sxiv.desktop
@@ -5,4 +5,4 @@ GenericName=Image Viewer
 Exec=sxiv %F
 MimeType=image/bmp;image/gif;image/jpeg;image/jpg;image/png;image/tiff;image/x-bmp;
 NoDisplay=true
-Icon=sxiv.png
+Icon=sxiv
