add svg dependencies

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -yq \
                    libimlib2-dev \
+                   librsvg2-dev \
+                   libcairo2-dev \
                    libx11-dev \
                    libxft-dev \
                    freetype2-doc \
